# LLaMA-Factory_zp

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/: _head.py  analyse.py  build_dataset.py  calculate_metric.py  calculate_metric_by_scores.py  calculate_metric_joint.py  data_.py  eval_confidence_scores.draw.py  eval_confidence_scores.py  eval_confidence_scores.without_subtext.py  eval_confidence_scores2.py  eval_confidence_scores3.py  eval_confidence_scores4.py  fit.py  llama_fit.py  main.py  main_file.py  prepare_dataset.py  process_png.without_subtext.py
src/llama_zp/: __init__.py  analyse.py  data_.py  main.py
src/scripts/: train_script.py  train_script_test.odd.py  train_script_test2.py
src/scripts/sga100/: 00-pred_script_test.py  00-train_script_test.py  01-pred_script_baseline.py  01-train_script_baseline.py  02-pred_script_baseline_sec.py  02-train_script_baseline_sec.py  03-train.distill_llama.py  __head.py  a.txt  b.sequences.txt  b.txt  c.json  pred_script_baseline.py  pred_script_test.py  train_script_baseline.py  train_script_test.py
src/template_script/: dataset_script.py  llama3_lora_eval.yaml  llama3_lora_pred_script.yaml  llama3_lora_sft.yaml  llama3_lora_train_script.yaml  llama3_lora_train_script_base.yaml  pred_script.py  run.sh  script_head.py  train_script.py
src/template_script/dataset_script/: 100-dataset_script_main_base.py  101-dataset_script_main_subtext.py  102-dataset_script_distill.py  103-dataset_script_distill_pred.py  104-dataset_script_filter.py  105-dataset_script_filter_pred.py  (+1 more)
src/utils/: __init__.py  attr_dic.py
